--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "flatpickr": "^4.6.13",
     "lucide-angular": "^0.563.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
